cc_binary(
    name = "ocs",
    srcs = ["oncall_scheduler.cc"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_github_google_or_tools//ortools/base",
        "@com_github_google_or_tools//ortools/sat:cp_model",
        "@com_github_google_or_tools//ortools/sat:model",
    ],
)
